# protocol

./: CMakeLists.txt  README.md  TODO
.proj_config/: project_config.json
config/: data_dwjz.txt
doc/json/: c-c++.txt  json标准.txt  json结构设计.txt  设计思路.txt
doc/websocket/: websocket.md
extern_inc/basic/: basic_head.h  logger.h
http/: CMakeLists.txt  http.cc
inc/: basic_head.h  http.h  json_type.h  msg_record.h  protocol.h  system_utils.h  websocket.h  wejson.h
inc/buffer/: byte_buffer.h  str_buffer.h
inc/data_structure/: base64.h  sha1.h
inc/http/: http.h  http_def.h
inc/json/: json_type.h  wejson.h
inc/websocket/: websocket.h
json/: CMakeLists.txt  json_type.cc  wejson.cc
main/: CMakeLists.txt  WeJson_Test.cc  http_test.cc  json_test.cc  parse_json.cc  url_test.cc  websocket_test.cc
src/: CMakeLists.txt  http.cc  json_type.cc  protocol.cc  url_parser.cc  websocket.cc  wejson.cc
url_parser/: url_parser.cc  url_parser.h
websocket/: websocket.cc
